kbd-chooser (0.46) UNRELEASED; urgency=low

  * Translators: do not modify this changelog to record changes you make to
    po files. A record of your contributions will be added to the changelog
    at package release time by the output-l10n-changes program.

 -- Christian Perrier <bubulle@kheops.frmug.org>  Mon, 22 Mar 2004 19:48:00 +0100

kbd-chooser (0.45) unstable; urgency=low

  * Updated translation
    - Russian by Nikolai Prokoschenko

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Mar 2004 13:41:03 -0500

kbd-chooser (0.44) unstable; urgency=low

  * Alastair McKinstry
    - Avoid segfault when we didn't pick a preferred keyboard. 
    Closes: #234513.
    - Ensure mac keyboards are included on powerpc architectures
    - *-kbd.c: Fix minor memory leak.
    - Disable usb detection code for powerpc for the moment.

 -- Alastair McKinstry <mckinstry@debian.org>  Sat, 13 Mar 2004 09:12:23 +0000

kbd-chooser (0.43) unstable; urgency=low

  * Translations:
    - Giuseppe Sacco
      - Updated italian translation by Davide Viti (it.po)
    - Ognyan Kulev
      - Updated Bulgarian translation (bg.po).
    - Dafydd Harries : Added Welsh translation (cy.po)

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Mar 2004 00:04:57 -0500

kbd-chooser (0.42) unstable; urgency=low

  * Joey Hess
    - Use three dots in elipses for consistency.
  * Updated translations:
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - Bartosz Fenski
      - Updated Polish translation (pl.po)
    - Pierre Machard
      - Updated French translation (fr.po)
    - Kenshi Muto
      - Updated Japanese translation (ja.po)
    - Konstantinos Margaritis
      - Updated Greek translation (el.po)
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation (zh_CN.po)
    - Jordi Mallach
      - Updated Catalan translation (ca.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (pt_BR.po)
    - Eugeniy Meshcheryakov