@@ -3,8 +3,13 @@ kbd-chooser (0.46) UNRELEASED; urgency=low
   * Translators: do not modify this changelog to record changes you make to
     po files. A record of your contributions will be added to the changelog
     at package release time by the output-l10n-changes program.
-
- -- Christian Perrier <bubulle@kheops.frmug.org>  Mon, 22 Mar 2004 19:48:00 +0100
+  * Alastair McKinstry 
+    - When using a serial console, ask "keyboard arch" question at low
+      priority, defaulting to "none". Closes: #231219.
+    - Also try to detect serial consoles from /proc/cmdline, to deal with
+      UARTs that don't support TIOCGSERIAL.
+    
+ -- Alastair McKinstry <mckinstry@debian.org>  Tue, 23 Mar 2004 21:32:00 +0000
 
 kbd-chooser (0.45) unstable; urgency=low
 
